@@ -2438,6 +2438,7 @@ in combination with other switches) is:
   skip builtin block graphics (-sbg)
   separate highlight colour (-highlightColor, -highlightTextColor)
   extended mouse reporting modes (1005 and 1015).
+  visual selection via -visual and -depth.
 
 It also enables some non-essential features otherwise disabled, such as:
 
